@@ -55,10 +55,15 @@ server_packet(const void *data, size_t length, void *ctx)
         break;
 
     case PA_DISCONNECT:
-        /* XXX: only disconnect this server */
         log(2, "aborting connection to client after packet 0x%x\n",
             *(const unsigned char*)data);
-        connection_invalidate(c);
+        connection_server_dispose(c, ls);
+        if (list_empty(&c->servers)) {
+            if (c->background)
+                log(1, "backgrounding\n");
+            else
+                connection_invalidate(c);
+        }
         return -1;
     }
 
